Added ReactJS Implementation

--- a/src/main/webapp/anglr/drug-list/drug-list.template.html
+++ b/src/main/webapp/anglr/drug-list/drug-list.template.html
@@ -6,8 +6,8 @@
 			<tr>
 				<td colspan="2" align="center">				
 				<a href="../jsp/ndc.jsp">JSP</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-				AngularJS
-</td>
+				AngularJS&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="../react">ReactJS</a>
+               </td>
 			</tr>
         <tr><td colspan=2 style="font-size:150%;" align="center">
         <h3>National Drug Codes</h3></td></tr>
